[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://materials/blurshader.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/blur_intensity = 1.0

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
main_menu_scene_path = "res://ui/MainMenu.tscn"

[node name="BlurScreen" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 64.4255, 39.6068 )
texture = ExtResource( 2 )
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 630.0
margin_top = 350.0
margin_right = 735.0
margin_bottom = 418.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
margin_right = 105.0
margin_bottom = 68.0

[node name="ResumeButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 105.0
margin_bottom = 20.0
text = "RESUME GAME"

[node name="MainMenuButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 105.0
margin_bottom = 44.0
text = "MAIN MENU"

[node name="ExitButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 105.0
margin_bottom = 68.0
text = "EXIT"

[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
